# agents_trio_langgraph

./: .env_sample  README.md  app.py  create_pdfs.py  pyproject.toml  streamlit_app.py  utils.py
agents/: aqi.py  pdfs.py  youtube.py
data/: youtube.csv
data/aqi/: delhi_2025-10-23.json  srinagar_2025-10-23.json
data/pdfs/: agent-workflows.txt  langchain-guide.txt
